force-app/objects/Target_Company__c/Target_Company__c.object-meta.xml
<CustomObject>
    <description>Target company that we are approaching</description>
    <label>Target Company</label>
    <nameField>
        <label>Target Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>