force-app/objects/Target_Company__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of the target company</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>