force-app/objects/Target_Company__c/fields/Market_2__c.field-meta.xml
<CustomField>
    <fullName>Market_2__c</fullName>
    <label>Market 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>