force-app/objects/Target_Company__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <description>Metropolitan Service Area</description>
    <label>MSA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>