force-app/objects/Target_Company__c/fields/PPP_000s__c.field-meta.xml
<CustomField>
    <fullName>PPP_000s__c</fullName>
    <description>PPP loan amount</description>
    <label>PPP (000s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>