force-app/objects/Target_Company__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <label>Product 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>