force-app/objects/Target_Company__c/fields/Target_Company_Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Company_Abbreviated_Name__c</fullName>
    <label>Target Company Abbreviated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>