force-app/objects/Target_Company__c/fields/Union__c.field-meta.xml
<CustomField>
    <fullName>Union__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Union</label>
    <type>Checkbox</type>
</CustomField>